--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,80 @@
-.vscode
-.log
-launch.json
+# Operating system files
+.DS_Store
+Icon?
+
+# Editor and IDE backup files
+*.bak
+*.swp
+*~
+*.sublime*
+.vscode/
+.idea/
+*.iml
+*.iws
+*.ipr
+*.tmp
+*.temp
+*.o
+*.obj
+*.pyc
+*.class
+
+# Compiled binary and bytecode files
+*.exe
+*.dll
+*.so
+*.dylib
+*.out
+*.app
+bin/
+obj/
+build/
+libs/
+
+# Package dependencies
+node_modules/
+jspm_packages/
+bower_components/
+vendor/
+packages/
+*.gem
+*.egg-info
+dist/
+target/
+*.rbc
+
+# Logs and databases
+*.log
+*.sql
+*.sqlite
+*.db
+
+# Configuration files containing sensitive information
+*.conf
+*.cfg
+*.ini
+*.key
+*.cert
+*.pem
+*.id_rsa
+*.id_dsa
+*.ovpn
+
+
+# - Node.js
+npm-debug.log
+yarn-error.log
+
+# Personal backup files
+*.bak
+*.orig
+*.old
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
